# rust-rest-api

./: Cargo.toml  README.md  Setting.toml  docker-compose.yml
src/: database.rs  main.rs  setting.rs
src/entities/: persons.rs
src/handlers/: users.rs
src/models/: error.rs  mod.rs  persons.rs
src/repositories/: mod.rs  persons.rs  user.rs
src/usecases/: users.rs  users_test.rs
