[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-macros = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
chrono = "0.4.38"
# sqlx = { version = "0.8", features = [
#   "runtime-tokio",
#   "postgres",
#   "chrono",
#   "uuid",
# ] }
mongodb = "2.0.0"
bson = "2.0.0"
config = "0.14.0"
mockall = "0.13.0"
urlencoding = "2.1.0"
